--- a/StockAnalysis/UserInfo/SafeViewController.xib
+++ b/StockAnalysis/UserInfo/SafeViewController.xib
@@ -45,7 +45,7 @@
                         </switch>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JDk-XN-cw2">
                             <rect key="frame" x="25" y="44" width="350" height="1"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="XqG-tx-fMe"/>
                             </constraints>
@@ -83,7 +83,7 @@
                         </switch>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WhF-hR-XOv">
                             <rect key="frame" x="25" y="44" width="350" height="1"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="PNZ-N3-1gh"/>
                             </constraints>
@@ -112,13 +112,17 @@
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OfN-Fz-y0p">
                             <rect key="frame" x="25" y="44" width="350" height="1"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="bc0-0A-x55"/>
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="WUR-nn-dMb">
-                            <rect key="frame" x="338" y="7" width="18" height="31"/>
+                            <rect key="frame" x="338" y="15" width="9" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="9" id="fCe-do-ddc"/>
+                                <constraint firstAttribute="height" constant="15" id="r69-nw-003"/>
+                            </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ljy-dQ-X6g">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
@@ -137,7 +141,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="qKD-cO-Agi" firstAttribute="centerY" secondItem="RU0-EU-ty7" secondAttribute="centerY" id="2JR-Vt-MXr"/>
-                        <constraint firstAttribute="trailing" secondItem="WUR-nn-dMb" secondAttribute="trailing" constant="19" id="5dS-Sd-5PO"/>
+                        <constraint firstAttribute="trailing" secondItem="WUR-nn-dMb" secondAttribute="trailing" constant="28" id="5dS-Sd-5PO"/>
                         <constraint firstAttribute="trailing" secondItem="OfN-Fz-y0p" secondAttribute="trailing" id="8xe-Ot-xSd"/>
                         <constraint firstAttribute="height" constant="45" id="CmW-VM-h7D"/>
                         <constraint firstAttribute="trailing" secondItem="qKD-cO-Agi" secondAttribute="trailing" constant="41" id="Nep-SY-HwV"/>
@@ -163,13 +167,17 @@
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PNe-P7-u99">
                             <rect key="frame" x="25" y="44" width="350" height="1"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="Qpx-Xc-NJp"/>
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="vXv-SD-Gk9">
-                            <rect key="frame" x="339" y="7" width="18" height="31"/>
+                            <rect key="frame" x="339" y="15" width="9" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="15" id="4Ix-3W-8DX"/>
+                                <constraint firstAttribute="width" constant="9" id="Iif-aY-AdR"/>
+                            </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UDA-eZ-Rfb">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
@@ -184,7 +192,7 @@
                         <constraint firstAttribute="bottom" secondItem="UDA-eZ-Rfb" secondAttribute="bottom" id="8jl-dZ-5hf"/>
                         <constraint firstItem="UDA-eZ-Rfb" firstAttribute="leading" secondItem="s7H-k6-Ht2" secondAttribute="leading" id="CjU-5k-b4R"/>
                         <constraint firstAttribute="bottom" secondItem="PNe-P7-u99" secondAttribute="bottom" id="DDD-kd-Wji"/>
-                        <constraint firstAttribute="trailing" secondItem="vXv-SD-Gk9" secondAttribute="trailing" constant="18" id="cZI-d4-9ec"/>
+                        <constraint firstAttribute="trailing" secondItem="vXv-SD-Gk9" secondAttribute="trailing" constant="27" id="cZI-d4-9ec"/>
                         <constraint firstItem="UDA-eZ-Rfb" firstAttribute="top" secondItem="s7H-k6-Ht2" secondAttribute="top" id="dcf-OE-bSM"/>
                         <constraint firstAttribute="height" constant="45" id="dwv-kS-v7e"/>
                         <constraint firstItem="PNe-P7-u99" firstAttribute="leading" secondItem="s7H-k6-Ht2" secondAttribute="leading" constant="25" id="ezg-pv-aQV"/>
@@ -205,13 +213,17 @@
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tNv-eB-BWC">
                             <rect key="frame" x="25" y="44" width="350" height="1"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="Dmb-rC-94y"/>
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="7e1-dE-mNk">
-                            <rect key="frame" x="339" y="7" width="18" height="31"/>
+                            <rect key="frame" x="339" y="15" width="9" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="9" id="Kc6-C6-gF0"/>
+                                <constraint firstAttribute="height" constant="15" id="a5Q-qN-coP"/>
+                            </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ii5-71-HmC">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
@@ -240,7 +252,7 @@
                         <constraint firstAttribute="trailing" secondItem="tNv-eB-BWC" secondAttribute="trailing" id="cMC-zm-edm"/>
                         <constraint firstItem="ii5-71-HmC" firstAttribute="leading" secondItem="xhC-WF-MaF" secondAttribute="leading" id="ijl-gx-lUR"/>
                         <constraint firstItem="ii5-71-HmC" firstAttribute="top" secondItem="xhC-WF-MaF" secondAttribute="top" id="nR1-iU-sea"/>
-                        <constraint firstAttribute="trailing" secondItem="7e1-dE-mNk" secondAttribute="trailing" constant="18" id="wY1-RK-cbG"/>
+                        <constraint firstAttribute="trailing" secondItem="7e1-dE-mNk" secondAttribute="trailing" constant="27" id="wY1-RK-cbG"/>
                         <constraint firstItem="tNv-eB-BWC" firstAttribute="leading" secondItem="xhC-WF-MaF" secondAttribute="leading" constant="25" id="wjP-Ar-hCL"/>
                     </constraints>
                 </view>
@@ -255,13 +267,17 @@
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xPL-ec-H5F">
                             <rect key="frame" x="25" y="44" width="350" height="1"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="fvc-dQ-hsZ"/>
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="yWR-RI-Z3I">
-                            <rect key="frame" x="339" y="7" width="18" height="31"/>
+                            <rect key="frame" x="339" y="15" width="9" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="15" id="Gls-dC-x0r"/>
+                                <constraint firstAttribute="width" constant="9" id="Tg6-f0-BFz"/>
+                            </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="orC-z2-nRH">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
@@ -279,7 +295,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="xPL-ec-H5F" secondAttribute="trailing" id="0BM-xR-iK7"/>
-                        <constraint firstAttribute="trailing" secondItem="yWR-RI-Z3I" secondAttribute="trailing" constant="18" id="86c-nj-Pr7"/>
+                        <constraint firstAttribute="trailing" secondItem="yWR-RI-Z3I" secondAttribute="trailing" constant="27" id="86c-nj-Pr7"/>
                         <constraint firstAttribute="trailing" secondItem="orC-z2-nRH" secondAttribute="trailing" id="DhV-TR-yfx"/>
                         <constraint firstAttribute="bottom" secondItem="orC-z2-nRH" secondAttribute="bottom" id="Hvp-ML-swW"/>
                         <constraint firstItem="xPL-ec-H5F" firstAttribute="leading" secondItem="Ga7-4A-OQg" secondAttribute="leading" constant="25" id="L4v-dB-27w"/>
@@ -305,13 +321,17 @@
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZCz-xT-XD1">
                             <rect key="frame" x="25" y="44" width="350" height="1"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="koc-7I-xjC"/>
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="bDl-8J-zbV">
-                            <rect key="frame" x="339" y="7" width="18" height="31"/>
+                            <rect key="frame" x="339" y="15" width="9" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="9" id="22L-hn-eiT"/>
+                                <constraint firstAttribute="height" constant="15" id="N1W-QT-0l9"/>
+                            </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ds-jK-V46">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
@@ -328,7 +348,7 @@
                         <constraint firstAttribute="bottom" secondItem="ZCz-xT-XD1" secondAttribute="bottom" id="MLI-be-9H9"/>
                         <constraint firstAttribute="trailing" secondItem="ZCz-xT-XD1" secondAttribute="trailing" id="Yp1-IB-id8"/>
                         <constraint firstItem="bDl-8J-zbV" firstAttribute="centerY" secondItem="FjQ-of-UBW" secondAttribute="centerY" id="bK5-F5-nhM"/>
-                        <constraint firstAttribute="trailing" secondItem="bDl-8J-zbV" secondAttribute="trailing" constant="18" id="dTe-aC-5dp"/>
+                        <constraint firstAttribute="trailing" secondItem="bDl-8J-zbV" secondAttribute="trailing" constant="27" id="dTe-aC-5dp"/>
                         <constraint firstItem="4ds-jK-V46" firstAttribute="leading" secondItem="FjQ-of-UBW" secondAttribute="leading" id="iae-hX-bMN"/>
                         <constraint firstItem="45h-I5-8S4" firstAttribute="leading" secondItem="FjQ-of-UBW" secondAttribute="leading" constant="15" id="jWG-sZ-hBS"/>
                         <constraint firstAttribute="height" constant="45" id="kBy-zg-D9X"/>
